# CSP

./: pyproject.toml
.devcontainer/: devcontainer.json
core/: csplib.py  util.py
tests/: test_csplib.py
